solc_ossfuzz_seed_corpus/test_solidity/test_360b70ea7b0db2e3d67728c05e3329fd04d82e222e99efe9ff1ce43b4b9e96db_c15cfb53f1871b133946237f04fc9cf28417aa6b_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  function f0(bool i0,uint208 i1,C0 i2) external returns(uint16 o0,uint104 o1,address o2)
  {

    o1 |= (++i1 * ~(((((i1 / ((i1++ << 13427121111803384275944579439204) >> i1)) | (i1 - ((((((i1 + (5681354605290922151743752267833 % (((~((((11377955892566807483705038747977 - 16539098836959875874497124529480) | 16650345520849232847092438228331) % 7556465236963502915109094503664)) % 7373500373110461338517982234871) << 13442881792456415764704137101877) ** 3561219730017960128437095026233))) << 16017703625548442687871744810272) & 4710421796677166376303287068117) ** 4250660913259128072156616406115) >> 11530884284710594316366827124507) | 1839434392068232131952402978527))) & 4315473661429094466624551053473) | 15078792341631377958519015071663)));
    if (true)
    { }
  }
}
pragma abicoder v1;
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
import "su0.sol";

==== Source: su2.sol ====
function f1(function () external i0)  returns(address o0)
{
  (((0x18190933d18c3a9b6b & 0xe397b61ccf1998bb6f) | 0xf004429ccf743a1749) & 0x6ba884fbf992fd9679);
  if (false)
  { }


}
// ----
// TypeError 2271: (su0.sol:246-463): Operator << not compatible with types int_const 80626134256797795371652752020 and int_const 13442881792456415764704137101877
// TypeError 2271: (su0.sol:245-499): Operator ** not compatible with types int_const 80626134256797795371652752020 and int_const 3561219730017960128437095026233
// TypeError 7366: (su0.sol:113-757): Operator |= not compatible with types uint104 and uint208
